--- a/9.html
+++ b/9.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 	<title>JavaScript Calculator</title>
-</head>	
 
-<body>
 	<script type="text/javascript">
 	function add(a,b) {
 		alert(a+b);
@@ -21,6 +19,11 @@
 	function div(a,b) {
 		alert(a/b);
 	}
+	</script>
+</head>	
+
+<body>
+	<script type="text/javascript">
 
 	alert('Calculator Started!');
 	var first_num = parseInt(prompt('Enter the first number: '));
